--- a/src/style.css
+++ b/src/style.css
@@ -138,11 +138,11 @@ b {
   button {
     height: 50px;
     margin-left: 0;
-    margin-top: 10px;
+    margin-top: 15px;
   }
 
   label {
-    height: 25px;
+    padding: 10px 20px;
   }
 
 }
